--- a/Thesis/diagrams/temptate.tex
+++ b/Thesis/diagrams/temptate.tex
@@ -11,6 +11,22 @@
 \usetikzlibrary{ decorations.markings}
 \usetikzlibrary {decorations.shapes}
 
+\usepackage{xcolor}
+
+\definecolor{C0}{HTML}{1f77b4}
+\definecolor{C1}{HTML}{ff7f0e}
+\definecolor{C2}{HTML}{2ca02c}
+\definecolor{C3}{HTML}{d62728}
+\definecolor{C4}{HTML}{9467bd}
+\definecolor{C5}{HTML}{8c564b}
+\definecolor{C6}{HTML}{e377c2}
+\definecolor{C7}{HTML}{7f7f7f}
+\definecolor{C8}{HTML}{bcbd22}
+\definecolor{C9}{HTML}{17becf}
+
+\tikzstyle{colmarking} = [C0,line width=1.5pt]
+\def\colortext{C0}
+
 \input{systems.tex}
 \newcommand{\m}{x}
 
