Some changes to clutering code
Changed the splitting algorithm such that it cuts small sigmas
Rewrote prts of the clustering code such tat it is possiblt to test different variants

--- a/Code/Split/Cluster.ipynb
+++ b/Code/Split/Cluster.ipynb
@@ -221,7 +221,7 @@
    "outputs": [],
    "source": [
     "def f(X,s_col,s_row):\n",
-    "    return np.linalg.norm(X[s_row][:,s_col],'nuc')+np.linalg.norm(X[~s_row][:,~s_col],'nuc')\n",
+    "    return 0\n",
     "\n",
     "def compute_sigmasf(X,s_col,s_row):\n",
     "    return np.linalg.svd(X[s_row][:,s_col],compute_uv=False), np.linalg.svd(X[~s_row][:,~s_col],compute_uv=False)\n",
@@ -250,7 +250,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def segment_matrix(stage_causal,stage_anticausal,N=70,initla_spectral=True,mode=1):\n",
+    "def segment_matrix(stage_causal,stage_anticausal,N=70,initla_spectral=True):\n",
     "    \n",
     "    Ac = stage_causal.A_matrix\n",
     "    Bc = stage_causal.B_matrix\n",
@@ -311,64 +311,69 @@
     "    s_rows[0]=s_r\n",
     "    fs[0]=f(X,s_c,s_r)\n",
     "    \n",
-    "    print(\"Mode\",mode)\n",
-    "    \n",
     "    for n in range(N):\n",
-    "        if mode == 1:\n",
-    "            #normlize\n",
-    "            X_l = X[:,s_c]\n",
-    "            X_r = X[:,~s_c]\n",
-    "\n",
-    "            X_l = X_l/np.linalg.norm(X_l,axis=1).reshape(-1,1)\n",
-    "            X_r = X_r/np.linalg.norm(X_r,axis=1).reshape(-1,1)\n",
-    "\n",
-    "            X_t = X[~s_r]\n",
-    "            X_b = X[s_r]\n",
+    "        #for test \n",
+    "        normalize =\"F\"\n",
+    "        \n",
+    "        #columns:\n",
+    "        X_t = X[~s_r]\n",
+    "        X_b = X[s_r]\n",
+    "        \n",
+    "        n_xt =np.linalg.norm(X_t,axis=0)\n",
+    "        n_xb =np.linalg.norm(X_b,axis=0)\n",
+    "        \n",
+    "        #weights unnormalized\n",
+    "        W_t = n_xt.reshape(-1,1)*n_xt.reshape(1,-1)-np.abs(X_t.T@X_t)\n",
+    "        W_b = n_xb.reshape(-1,1)*n_xb.reshape(1,-1)-np.abs(X_b.T@X_b)\n",
+    "        \n",
+    "        #nomalize\n",
+    "        if normalize ==\"F\": #Forbenius norm\n",
+    "            W_t = W_t/(n_xt.reshape(-1,1)*n_xt.reshape(1,-1))\n",
+    "            W_b = W_b/(n_xb.reshape(-1,1)*n_xb.reshape(1,-1))\n",
+    "        elif normalize ==\"L\": #length\n",
+    "            W_t = W_t/(np.count_nonzero(~s_r)**2)\n",
+    "            W_b = W_b/(np.count_nonzero(s_r)**2)\n",
+    "        elif normalize ==\"M\": #mixed: reference with norm, current with length\n",
+    "            W_t = W_t/(n_xt.reshape(-1,1)*np.count_nonzero(~s_r))#\n",
+    "            W_b = W_b/(n_xb.reshape(-1,1)*np.count_nonzero(s_r))\n",
     "            \n",
-    "            X_t = X_t/np.linalg.norm(X_t,axis=0).reshape(1,-1)\n",
-    "            X_b = X_b/np.linalg.norm(X_b,axis=0).reshape(1,-1)\n",
+    "        #rows:\n",
+    "        X_r = X[:,~s_c]\n",
+    "        X_l = X[:,s_c]\n",
+    "        \n",
+    "        n_xr = np.linalg.norm(X_r,axis=1)\n",
+    "        n_xl = np.linalg.norm(X_l,axis=1)\n",
+    "        \n",
+    "        #Weights unnormalized\n",
+    "        W_r =n_xr.reshape(-1,1)*n_xr.reshape(1,-1)-np.abs(X_r@X_r.T)\n",
+    "        W_l =n_xl.reshape(-1,1)*n_xl.reshape(1,-1)-np.abs(X_l@X_l.T)\n",
+    "        \n",
+    "        #normlaize\n",
+    "        if normalize ==\"F\": #Forbenius norm\n",
+    "            W_r = W_r/(n_xr.reshape(-1,1)*n_xr.reshape(1,-1))\n",
+    "            W_l = W_l/(n_xl.reshape(-1,1)*n_xl.reshape(1,-1))\n",
+    "        elif normalize ==\"L\": #length\n",
+    "            W_r = W_r/(np.count_nonzero(~s_c)**2)#\n",
+    "            W_l = W_l/(np.count_nonzero(s_c)**2)\n",
+    "        elif normalize ==\"M\": #mixed: reference with norm, current with length\n",
+    "            W_r = W_r/(n_xr.reshape(-1,1)*np.count_nonzero(~s_c))#\n",
+    "            W_l = W_l/(n_xl.reshape(-1,1)*np.count_nonzero(s_c))\n",
     "\n",
-    "            #compute cost matricies and cost vectors \n",
-    "            #columns\n",
-    "            Adj_b = 1-abs(X_b.T@X_b)\n",
-    "            Adj_t = 1-abs(X_t.T@X_t)\n",
-    "            #Adj_b = 1-(X_b.T@X_b)**2#more in line with numerical definition but does apparentl not work as well\n",
-    "            #Adj_t = 1-(X_t.T@X_t)**2\n",
-    "            #f_col = np.sum(Adj_b[:,s_c],axis=1)/np.count_nonzero(s_c) - np.sum(Adj_t[:,~s_c],axis=1)/np.count_nonzero(~s_c)\n",
-    "            f_col = np.sum(Adj_b[:,s_c],axis=1) - np.sum(Adj_t[:,~s_c],axis=1)\n",
-    "\n",
-    "            Adj_l = 1-abs(X_l@X_l.T)\n",
-    "            Adj_r = 1-abs(X_r@X_r.T)\n",
-    "            #f_row = np.sum(Adj_l[:,s_r],axis=1)/np.count_nonzero(s_r) - np.sum(Adj_r[:,~s_r],axis=1)/np.count_nonzero(~s_r)\n",
-    "            f_row = np.sum(Adj_l[:,s_r],axis=1) - np.sum(Adj_r[:,~s_r],axis=1)\n",
-    "        elif mode == 2:\n",
-    "            L_col = graphs.calculate_Laplacian(X)\n",
-    "            np.fill_diagonal(L_col,0)\n",
-    "            f_col = np.sum(L_col[:,s_c],axis=1) - np.sum(L_col[:,~s_c],axis=1)\n",
-    "            L_row = graphs.calculate_Laplacian(X.T)\n",
-    "            np.fill_diagonal(L_row,0)\n",
-    "            f_row = np.sum(L_row[:,s_r],axis=1) - np.sum(L_row[:,~s_r],axis=1)\n",
-    "            \n",
-    "\n",
+    "        S_col = np.sum(W_t[~s_c],axis=0) -np.sum(W_b[s_c],axis=0)\n",
+    "        S_row = np.sum(W_r[~s_r],axis=0) -np.sum(W_l[s_r],axis=0)\n",
     "        \n",
-    "        #try to minimize -> choose smaller one\n",
+    "        ord_c = d_in_c +np.argsort(S_col[d_in_c:X.shape[1]-d_in_a])\n",
+    "        ord_r = d_out_a+np.argsort(S_row[d_out_a:X.shape[0]-d_out_c])\n",
     "        \n",
-    "        ord_c = d_in_c +np.argsort(f_col[d_in_c:X.shape[1]-d_in_a])\n",
-    "        ord_r = d_out_a+np.argsort(f_row[d_out_a:X.shape[0]-d_out_c])\n",
-    "        s_c[d_in_c:X.shape[1]-d_in_a]=0\n",
-    "        s_r[d_out_a:X.shape[0]-d_out_c]=0\n",
-    "        v_c =ord_c[f_col[ord_c]<v_reg_col]\n",
-    "        v_r =ord_r[f_row[ord_r]<v_reg_row]\n",
-    "        s_c[v_c]=1\n",
-    "        s_r[v_r]=1\n",
     "        \n",
-    "        #print(f_col)\n",
-    "        #print(f_row)\n",
+    "        v_c = ord_c[v_reg_col<S_col[ord_c]]\n",
+    "        v_r = ord_r[v_reg_row<S_row[ord_r]]\n",
     "        \n",
-    "        #s_c[:]=0\n",
-    "        #s_c[f_col<0]=1\n",
-    "        #s_r[:]=0\n",
-    "        #s_r[f_row<0]=1\n",
+    "        s_c[d_in_c:s_c.size-d_in_a]=0\n",
+    "        s_r[d_out_a:s_r.size-d_out_c]=0\n",
+    "        \n",
+    "        s_c[v_c] = 1\n",
+    "        s_r[v_r] = 1\n",
     "        \n",
     "        \n",
     "        fs[n+1] = f(X,s_c,s_r)\n",
@@ -378,8 +383,10 @@
     "        if np.any(np.logical_and(np.all(s_cols[:n+1]==s_c,axis=1),np.all(s_rows[:n+1]==s_r,axis=1))):\n",
     "            print(\"converged at n=\",n)\n",
     "            break\n",
-    "\n",
-    "    return fs[:n+2],s_cols[:n+2],s_rows[:n+2],X,s_c[d_in_c:X.shape[1]-d_in_a],s_r[d_out_a:X.shape[0]-d_out_c]\n",
+    "        \n",
+    "    report ={\"s_cols\":s_cols[:n+2],\"s_rows\":s_rows[:n+2],\"X\":X}\n",
+    "        \n",
+    "    return s_c[d_in_c:X.shape[1]-d_in_a],s_r[d_out_a:X.shape[0]-d_out_c],report\n",
     "        \n"
    ]
   },
@@ -399,7 +406,9 @@
     "sys = Split.initial_mixed(T)\n",
     "stage_c=sys.causal_system.stages[k]\n",
     "stage_a=sys.anticausal_system.stages[k]\n",
-    "fs,s_cols,s_rows,X,s_c,s_r = segment_matrix(stage_c,stage_a,N=20,initla_spectral=True,mode =1)"
+    "s_c,s_r,report = segment_matrix(stage_c,stage_a,N=20,initla_spectral=True)\n",
+    "s_cols = report[\"s_cols\"]\n",
+    "s_rows = report[\"s_rows\"]"
    ]
   },
   {
@@ -453,73 +462,6 @@
    "source": [
     "plt.spy(s_rows)\n",
     "print(np.count_nonzero(s_cols[-1])/len(s_cols[-1]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(fs)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Version 2 \n",
-    "\n",
-    "To test two approaches against each other"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "sys = Split.initial_mixed(T)\n",
-    "stage_c=sys.causal_system.stages[k]\n",
-    "stage_a=sys.anticausal_system.stages[k]\n",
-    "fs,s_cols,s_rows,X,s_c,s_r = segment_matrix(stage_c,stage_a,N=20,initla_spectral=True,mode=2)"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "s_start_c,s_start_a = compute_sigmasf(X,s_cols[0],s_rows[0])\n",
-    "s_end_c,s_end_a = compute_sigmasf(X,s_cols[-1],s_rows[-1])\n",
-    "\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.plot(s_start_c,label=\"start\")\n",
-    "plt.plot(s_end_c,label=\"end\")\n",
-    "plt.legend()\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.plot(s_start_a,label=\"start\")\n",
-    "plt.plot(s_end_a,label=\"end\")"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "plt.spy(s_cols)\n",
-    "print(np.count_nonzero(s_cols[-1])/len(s_cols[-1]))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "plt.spy(s_rows)\n",
-    "print(np.count_nonzero(s_cols[-1])/len(s_cols[-1]))"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "plt.plot(fs)"
    ]
   },
   {
@@ -630,7 +572,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## combine it to algorithm"
+    "## Get test matrix"
    ]
   },
   {
@@ -639,18 +581,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dims_in =  np.array([5, 5, 5, 5])*5\n",
-    "dims_out = np.array([5, 5, 5, 5])*5\n",
+    "dims_in =  np.array([4, 4, 4, 4])*6\n",
+    "dims_out = np.array([4, 4, 4, 4])*6\n",
     "\n",
-    "n = 3\n",
+    "#dims_in =  np.array([9, 7, 7, 9])*3\n",
+    "#dims_out = np.array([7, 9, 9, 7])*3\n",
+    "\n",
+    "\n",
+    "n = 2\n",
     "#create orthogonal vectors and normalize them to the size of the matix (i.e. norm(block)/size(block) = const\n",
     "Us =np.vstack([scipy.stats.ortho_group.rvs(dims_out[i])[:,:3*n]*dims_out[i] for i in range(len(dims_in))])\n",
     "Vts=np.hstack([scipy.stats.ortho_group.rvs(dims_in[i])[:3*n,:]*dims_in[i] for i in range(len(dims_in))])\n",
     "\n",
+    "s = np.linspace(1,0.75,n)\n",
     "\n",
-    "lower = Us[:,:n]@Vts[:n,:]\n",
-    "diag = Us[:,n:2*n]@Vts[n:2*n,:]\n",
-    "upper = Us[:,2*n:3*n]@Vts[2*n:3*n,:]\n",
+    "lower = Us[:,:n]@np.diag(s)@Vts[:n,:]\n",
+    "diag = Us[:,n:2*n]@np.diag(s)@Vts[n:2*n,:]\n",
+    "upper = Us[:,2*n:3*n]@np.diag(s)@Vts[2*n:3*n,:]\n",
     "matrix = np.zeros_like(diag)\n",
     "a=0;b=0\n",
     "for i in range(len(dims_in)):\n",
@@ -681,6 +628,13 @@
     "sys = Split.initial_sigmas_mixed(T)\n",
     "utils.show_system(sys,mark_D=False)\n",
     "utils.check_dims(sys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## combine it to algorithm"
    ]
   },
   {
@@ -750,12 +704,14 @@
     "    Ps_row =np.zeros((N+1,P_row.size),dtype=int)\n",
     "    Ps_col[0]=P_col\n",
     "    Ps_row[0]=P_row\n",
+    "    reports = []\n",
     "    for n in range(N):\n",
     "        print(n)\n",
     "        for k in range(len(sys.causal_system.stages)-1,-1,-1): #reverse ordering makes indexing easier \n",
     "            stage_c=sys.causal_system.stages[k]\n",
     "            stage_a=sys.anticausal_system.stages[k]\n",
-    "            fs,s_cols,s_rows,X,s_c,s_r = segment_matrix(stage_c,stage_a,N=20)\n",
+    "            s_c,s_r,report = segment_matrix(stage_c,stage_a,N=20)\n",
+    "            reports.append(report)\n",
     "            \n",
     "            assert len(s_c)==stage_c.dim_in ,\"dims_in causal do not match s_c\"\n",
     "            assert len(s_r)==stage_c.dim_out,\"dims_out causal do not match s_r\"\n",
@@ -771,7 +727,7 @@
     "        Ps_col[n+1]=P_col\n",
     "        Ps_row[n+1]=P_row\n",
     "    \n",
-    "    return Ps_col,Ps_row"
+    "    return Ps_col,Ps_row,reports"
    ]
   },
   {
@@ -791,7 +747,7 @@
    "source": [
     "gamma = 1e6\n",
     "sys = Split.initial_sigmas_mixed(T)\n",
-    "Ps_col,Ps_row = identification_split_clustering(sys,2)\n",
+    "Ps_col,Ps_row,reports = identification_split_clustering(sys,2)\n",
     "P_col = Ps_col[-1]\n",
     "P_row = Ps_row[-1]\n",
     "utils.check_dims(sys)\n",
@@ -898,21 +854,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "np.repeat([0,1],50)[P_in_ref][Ps_col[2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.repeat([0,1],50)[P_out_ref][Ps_row[2]]"
+    "plt.matshow(reports[0][\"X\"])"
    ]
   },
   {
@@ -967,10 +912,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gamma = 1e5\n",
+    "gamma = 5e3\n",
     "\n",
     "sys_per = Split.initial_sigmas_mixed(T)\n",
-    "Ps_col,Ps_row = identification_split_clustering(sys_per,3)\n",
+    "Ps_col,Ps_row,reporst = identification_split_clustering(sys_per,3)\n",
     "utils.check_dims(sys_per)\n",
     "utils.show_system(sys_per)"
    ]
