Some cleanups in Clustering code
Moved a couple of things in sperate files
Cleaned up  some things in notebook
Added some missing documentation

--- a/Code/Split/Cluster.ipynb
+++ b/Code/Split/Cluster.ipynb
@@ -391,13 +391,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Verison 1"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -409,21 +402,6 @@
     "s_c,s_r,report = segment_matrix(stage_c,stage_a,N=20,initla_spectral=True)\n",
     "s_cols = report[\"s_cols\"]\n",
     "s_rows = report[\"s_rows\"]"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "sys_ = Split.initial_sigmas_mixed(T)\n",
-    "Split.split_sigmas_mixed(sys_,0,500,500)\n",
-    "sys = Split.get_system_mixed(sys_)\n",
-    "utils.check_dims(sys)\n",
-    "utils.show_system(sys,mark_D=False)\n",
-    "k=0\n",
-    "stage_c=sys.causal_system.stages[k]\n",
-    "stage_a=sys.anticausal_system.stages[k]\n",
-    "fs,s_cols,s_rows,X = segment_matrix(stage_c,stage_a,N=10)"
    ]
   },
   {
@@ -822,23 +800,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### TODO: Some assymetry here\n",
-    "\n",
-    "The algorithm usually recvers the row clustering, but is unable to recover the column clustering. \n",
-    "This is reagerdless of wheater the matrix is transposed or not"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = plt.cm.get_cmap('viridis')\n",
-    "colors = np.repeat(cmap(np.linspace(0,1,4)),dims_in,axis=0)[P_in_ref]\n",
+    "cmap = plt.cm.get_cmap('tab20')\n",
+    "colors = np.repeat(cmap((1/20)*np.arange(4)+0.001),dims_in,axis=0)[P_in_ref]\n",
     "perm.multiple_connection_plot(perm.invert_permutations(Ps_col),colors=colors,start=0,end=2)"
    ]
   },
@@ -848,8 +816,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cmap = plt.cm.get_cmap('viridis')\n",
-    "colors = np.repeat(cmap(np.linspace(0,1,4)),dims_out,axis=0)[P_out_ref]\n",
+    "cmap = plt.cm.get_cmap('tab20')\n",
+    "colors = np.repeat(cmap((1/20)*np.arange(4)+0.001),dims_out,axis=0)[P_out_ref]\n",
     "perm.multiple_connection_plot(perm.invert_permutations(Ps_row),colors=colors,start=0,end=2)"
    ]
   },
