Illustrative example clustering

--- a/Thesis/masterthesis.tex
+++ b/Thesis/masterthesis.tex
@@ -2559,6 +2559,14 @@ The number with the new segmentation is lower than for initial segmentation if $
 The reidentified system has requires an equal or higher number of multiplications if $\epsilon < \frac{1}{4} \|A\|_H$.
 This is due to the fact that in this case the necessary information has been removed before the running Algorithm\,\ref{alg:optimize segemtnation}.
 
+\begin{figure}[!htb]
+	\centering
+	\includegraphics[width=0.75\textwidth]{Plots/example_permute.pdf}
+	\caption{TODO.
+	}
+	\label{fig:example_move_bound}
+\end{figure}
+
 
 \chapter{Discussion}
 
